--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@arcanewizards/electron-media-service",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "private": false,
   "description": "Fork of electron-media-service",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "author": "Samuel Attard",
   "license": "MIT",
   "repository": {
